# meter

./: LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  meter.c
t/: Makefile.am  test.c  test.sh
t/mm/: Makefile  mm.c
